--- a/mangaka-ai/package.json
+++ b/mangaka-ai/package.json
@@ -7,7 +7,8 @@
     "dev:turbo": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test-atomic-deletion": "node scripts/test-atomic-deletion.js"
   },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.10.0",
@@ -22,6 +23,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "sharp": "^0.34.2",
     "tailwind-merge": "^3.3.0",
     "zustand": "^5.0.5"
   },
