--- a/mangaka-ai/package.json
+++ b/mangaka-ai/package.json
@@ -11,16 +11,26 @@
     "test-atomic-deletion": "node scripts/test-atomic-deletion.js"
   },
   "dependencies": {
+    "@pixi/assets": "^7.4.3",
+    "@pixi/events": "^7.4.3",
+    "@pixi/extract": "^7.4.3",
+    "@pixi/graphics": "^7.4.3",
+    "@pixi/react": "^8.0.0-beta.25",
+    "@pixi/text": "^7.4.3",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fabric": "^6.6.6",
+    "html2canvas": "^1.4.1",
     "immer": "^10.1.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "pixi.js": "^8.5.2",
     "react": "^19.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "sharp": "^0.34.2",
