--- a/mangaka-ai/package.json
+++ b/mangaka-ai/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fabric": "^6.6.6",
+    "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "immer": "^10.1.1",
     "jspdf": "^3.0.1",
@@ -40,6 +41,7 @@
     "react-hot-toast": "^2.5.2",
     "react-konva": "^19.0.5",
     "sharp": "^0.34.2",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "use-image": "^1.1.4",
     "zustand": "^5.0.5"
@@ -47,6 +49,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
