--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     "tailwind-merge": "^3.3.0",
     "zustand": "^5.0.5"
   },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@playwright/test": "^1.53.1",
