--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jspdf": "^3.0.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "pixi.js": "^8.10.2",
     "react": "^19.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
