--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tiptap/starter-kit": "^2.14.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.0.1",
     "fabric": "^6.6.6",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
